style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Righteous&display=swap');
/* font-family: 'Righteous', cursive; 
    font-family: 'Open Sans', sans-serif;
*/

body {
    box-sizing: border-box;
    background: rgb(180, 180, 255);
    color: rgb(0, 0, 0, 0.7);

    height: 100vh;
    text-align: center;
    margin: 0;
    padding: 0;

    font-family: 'Open Sans', sans-serif;
}

main {
    position: relative;
    top: 20%;
}

h1,
.city,
.temp {
    font-family: 'Righteous', cursive;
}

h1 {
    margin: 0;
    font-size: 2.5rem;
    white-space: nowrap;
}

p {
    margin: 0;
}

.search-bar {
    min-width: fit-content;

    display: flex;
    justify-content: center;
    font-size: 1rem;
}

input {
    flex: 0 0 auto;
    width: 250px;
    border: none;
    border-top-left-radius: 0.5rem ;
    border-bottom-left-radius: 0.5rem ;
    padding: 5px 10px;
    background-color: rgb(255, 255, 255, 0.8);
    outline: none;
}

button {
    padding: 5px 10px;
    margin: 0;
    
    border: none;
    border-top-right-radius: 0.5rem ;
    border-bottom-right-radius: 0.5rem ;

    background-color: rgb(100, 100, 255);
    opacity: 0.8;
    color: white;

    cursor: pointer;
}

button:hover {
    opacity: 1;
}

button:active {
    font-size: 0.8rem;
}

.main-content {
    display: flex;
    justify-content:space-evenly;
    gap: 20px;
    max-width: 400px;
    min-width: fit-content;
    padding: 20px 20px;

    margin: 20px auto;
    border-radius: 0.5rem;
    
    background-color: rgb(255, 255, 255, 0.5);
    text-align: left;
}

.main-right {
    padding-left: 30px;
    border-left: 1px solid black;
    align-self: center;
    position: relative;
}

.city {
    font-size: 1.5rem;
    font-weight: 700;
}

.weather {
    margin-bottom: -20px;
}

img {
    width: 100%;
    height: auto;
}

.weather-desc {
    margin-top: -30px;
    text-align: center;
    font-size: 0.8rem;
    white-space: nowrap;
}

.temp {
    font-size: 3rem;
    font-weight: 700;
}

.more-info {
    display: grid;
    grid-template-areas:
        "feels-like humidity"
        "feels-like-value humidity-value"
        "max-temp min-temp"
        "max-temp-value min-temp-value";
    column-gap: 25px;
}

.more-info > p {
    font-size: 0.8rem;
}

.more-info > p > span {
    color: rgb(100, 100, 255);
}

.item {
    white-space: nowrap;
}

.item-1 {
    grid-area: feels-like;
}

.item-2 {
    grid-area: feels-like-value;
    margin-bottom: 15px;
}

.item-5 {
    grid-area: max-temp;
}

.item-6 {
    grid-area: max-temp-value;
}

.toggle-btn {
    position: absolute;
    top: 15px;
    right: -20px;
    border-radius: 0.5rem;
    opacity: 0.6;
    background-color: rgb(0, 0, 0, 0.9);
}

.toggle-btn:hover {
    background-color: rgb(100, 100, 255);
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 45px;
    display: flex;
    justify-content: center;
    align-content: center;
    background-color: rgb(0, 0, 0, 0.9);
    font-size: 0.9rem;
}

footer a,
footer p {
    color: white;
    align-self: center;
    letter-spacing: 0.1rem;
    margin: 5px 0;
}

footer a {
    font-weight: bold;
}

footer img {
    background-color: white;
    height: 1.2rem;
    width: auto;
    margin-left: 10px;
    border-radius: 100%;
    padding: 1px;
}

footer img:hover {
    animation: iconrotate 500ms ease-in 0s 1 normal forwards;;
}

@keyframes iconrotate {
    0% {
        transform: rotate(0);
        scale: 1;
    } 50% {
        scale: 1.2;
    } 100% {
        transform: rotate(360deg);
        scale: 1;
    }
}

